--- a/NewProj/NewProjApi/appsettings.json
+++ b/NewProj/NewProjApi/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
-}
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "NZWalks" : "Server=LAPTOP-5H6FI7EJ;Database=NZWalksDb1;Trusted_Connection=True;TrustServerCertificate=True"
+  }
+  }
